infra/monitoring/grafana-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana-deploy
  namespace: monitoring
  labels:
    app.kubernetes.io/name: grafana
    app.kubernetes.io/instance: grafana-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: grafana-pod
  template:
    metadata:
      name: grafana
      labels:
        app.kubernetes.io/name: grafana
        app.kubernetes.io/instance: grafana-pod
    spec:
      containers:
      - name: grafana-pod
        image: grafana/grafana:latest
        ports:
          - containerPort: 3000
        resources:
          limits:
            memory: "1Gi"
            cpu: "500m"
          requests:
            memory: "1Gi"
            cpu: "500m"
        volumeMounts:
          - mountPath: /var/lib/grafana
            name: grafana-storage
          - mountPath: /etc/grafana/provisioning/datasources
            name: grafana-datasources
            readOnly: false
      volumes:
        - name: grafana-storage
          emptyDir: {}
        - name: grafana-datasources
          configMap:
              defaultMode: 420
              name: grafana-datasources
