infra/monitoring/prometheus-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: monitoring
  annotations:
      prometheus.io/scrape: 'true'
      prometheus.io/port:   '9090'
spec:
  selector:
    app.kubernetes.io/instance: prometheus-server
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 9090
      nodePort: 30003
